--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Maria Vitoria</title></title>
+        <title> Maria Vitoria Da Silva Batista</title></title>
     </head>
     <body>
      <h1> Maria Vitoria </h1>
