--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
      <h1> Maria Vitoria </h1>
-     <a href="atividade1/"> Atividade1 links</a>
+     <br><a href="atividade1/"> Atividade1 links</a><br>
+     <a href="atividade 2/">Atividade2 tags</a>
     </body>
 </html>
