--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     </head>
     <body>
      <h1> Maria Vitoria </h1>
-     <br><a href="atividade1/"> Atividade1 links</a><br>
-     <a href="atividade 2/">Atividade2 tags</a>
+     <a href="01/"> Atividade 01 </a>- links <br>
+     <a href="02/">Atividade 02 </a>- Mais Tags <br>
+     <a href="03/">Atividade 03 </a>-  <br>
+     <a href="04/">Atividade 04 </a>- <br>
+
     </body>
 </html>
