--- a/atividade2/index.html
+++ b/atividade2/index.html
@@ -33,6 +33,5 @@
     <li>Terceiro</li>
 </ol>
 <hr>
-<img height="30px"src="https://suap.ifpi.edu.br/media/configura%C3%A7%C3%A3o/logo-ifpi-transp.png"
-</body>
+<img height="30px" src="https://lh3.googleusercontent.com/Ekz-eiLJj35TqTTXwQTrM0fkthtab5ZazKDfPzCckLAHSuaO_WB5t2Yzemsp_j7Zxpep=s36">
 </html>
