--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     </head>
     <body>
      <h1> Maria Vitoria </h1>
-     <a href="01/"> Atividade 01 </a>- links <br>
-     <a href="02/">Atividade 02 </a>- Mais Tags <br>
-     <a href="03/">Atividade 03 </a>-  <br>
-     <a href="04/">Atividade 04 </a>- <br>
+     <a href="01/"> Atividade 01 </a>- Links <br>
+     <a href="02/">Atividade 02 </a>- Tags <br>
+     <a href="03/">Atividade 03 </a>- Tabelas <br>
+     <a href="04/">Atividade 04 </a>- Formulários <br>
 
     </body>
 </html>
