--- a/04/adicionar.html
+++ b/04/adicionar.html
@@ -1,3 +1,3 @@
-<form action="http://191.252.62.149:8080/pweb/salvar.jsp" method="post">
+<form action="adicionar.html" method="post">
     <h1> Usuário adcionado com sucesso! </h1>
 </form>
