--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
      <a href="03/">Atividade 03 </a>- Tabelas <br>
      <a href="04/">Atividade 04 </a>- Formulários <br>
      <a href="05">Atividade 05 </a>- CSS <br>
-
+     <a href="06">Atividade 06 </a>- Projeto01<br>
     </body>
 </html>
