--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <a href="03/">Atividade 03 </a>- Tabelas <br>
      <a href="04/">Atividade 04 </a>- Formulários <br>
      <a href="05">Atividade 05 </a>- CSS <br>
-     <a href="projeto01/index.html">Projeto 01 </a>- Projeto01<br>
+     <a href="projeto01">Projeto 01 </a>- Projeto01<br>
      <a href="06">Atividade 06 </a>- <br>
      <a href="07">Atividade 07 </a>- <br>
      <a href="08">Atividade 08 </a>- <br>
