--- a/projeto01/cadastro.html
+++ b/projeto01/cadastro.html
@@ -1,3 +1,6 @@
+<table border="0" width="100%" align="left">
+    <td> <img src="imagens/logo.png"/></td>
+    
 <table  width="900" align="center">
     <h1>cadastre-se</h1>
     <form>
