--- a/projeto01/contato.html
+++ b/projeto01/contato.html
@@ -23,7 +23,7 @@
     <h1>Comece sua aventura inesquecível!</h1>
       <p>A JM Viagens é especializada em transformar sonhos em viagens incríveis. 
       Com nossa expertise e atendimento personalizado, vamos te ajudar a planejar a viagem perfeita, seja para relaxar, se aventurar ou explorar novos lugares.</p>
-      <a href="cadastro.html" class="botao">Fale Conosco</a>    
+      <a href="cadastro.html" class="botao">Cadastre-se</cadastre-se></a>    
        <br.
       <table  width="900" align="center">
       <td style="text-align: center">
