--- a/projeto01/quem-somos.html
+++ b/projeto01/quem-somos.html
@@ -1,37 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title> Quem somos</title>
+<head>
+    <title>Quem somos</title>
     <meta charset="utf-8" />
-  </head>
-  <body>
-    <table border="0" width="100%" align="left">
-    <td> <img src="imagens/logo.png"/></td>
-    
-    <table border="0" width="100%" align="right">
-    <td align="right">
-      <a href="index.html">Home</a> 
-      <a href="quem-somos.html">Quem somos</a> 
-      <a href="contato.html">Contato</a>
-      </td>
+    <style>
+        body {
+            text-align: left;
+        }
+        h1, h2 {
+            color: orange;
+        }
+        h1 {
+            text-align: center;
+        }
+        footer {
+            text-align: center;
+        }
+        footer p, footer a {
+            color: black; /* Se você tiver uma cor específica para o texto do rodapé, pode substituir aqui */
+        }
+        /* Adicione estilos adicionais conforme necessário */
+    </style>
+</head>
+<body>
+    <table border="0" width="100%">
+        <tr>
+            <td><img src="imagens/logo.png" /></td>
+        </tr>
     </table>
 
-    <table border="0" width="100%" align="center">
-    <td> <img src="imagens/quem_somos.png " width="100%"/></td>
+    <table border="0" width="100%">
+        <tr>
+            <td align="right">
+                <a href="index.html">Home</a>
+                <a href="quem-somos.html">Quem somos</a>
+                <a href="contato.html">Contato</a>
+            </td>
+        </tr>
+    </table>
 
-    <table  width="900" align="center">
-    <p>Há muitas variações de passagens de Lorem Ipsum disponíveis, mas a maioria sofreram alteração de alguma forma, por humor injetado, ou palavras aleatórias que não parece nem um pouco crível. Se você for usar uma passagem de Lorem Ipsum, Você precisa ter certeza de que não há nada embaraçoso escondido no meio do texto. Todos os geradores Lorem Ipsum na Internet tendem a repetir partes predefinidas conforme necessário, tornando este o primeiro verdadeiro gerador na Internet. Ele usa um dicionário de mais de 200 latim combinado com um punhado de estruturas de sentenças modelo, para gerar Lorem Ipsum que parece razoável. O Lorem Ipsum gerado é, portanto, sempre livre de repetição, humor injetado, ou palavras não características etc.</p>
-    <p>Há muitas variações de passagens de Lorem Ipsum disponíveis, mas a maioria sofreram alteração de alguma forma, por humor injetado, ou palavras aleatórias que não parece nem um pouco crível. Se você for usar uma passagem de Lorem Ipsum, Você precisa ter certeza de que não há nada embaraçoso escondido no meio do texto. Todos os geradores Lorem Ipsum na Internet tendem a repetir partes predefinidas conforme necessário, tornando este o primeiro verdadeiro gerador na Internet. Ele usa um dicionário de mais de 200 latim combinado com um punhado de estruturas de sentenças modelo, para gerar Lorem Ipsum que parece razoável. O Lorem Ipsum gerado é, portanto, sempre livre de repetição, humor injetado, ou palavras não características etc.
+    <table border="0" width="100%">
+        <tr>
+            <td><img src="imagens/quem_somos.png" width="100%" /></td>
+        </tr>
+    </table>
 
+    <table width="100%">
+        <tr>
+            <td>
+                <h1>JM Viagens: Tornando Seus Sonhos de Viagem Realidade</h1>
+                <h2>Nossa História:</h2>
+                <p>A JM Viagens nasceu da paixão por viagens e do desejo de transformar sonhos em realidade. Somos uma empresa familiar fundada em 2024 por (Maria Vitória Da Silva Batista), que, desde então, se dedica a proporcionar experiências de viagem únicas e memoráveis para nossos clientes.</p>
+                <h2>Nossa Missão:</h2>
+                <p>Nossa missão é oferecer aos nossos clientes um serviço de excelência em viagens, com foco em:</p>
+                <p><b>Atendimento personalizado:</b> Acreditamos que cada cliente é único e possui necessidades específicas. Por isso, oferecemos um atendimento personalizado e dedicado, desde a escolha do destino até o retorno para casa.</p>
+                <p><b>Experiências autênticas:</b> Buscamos oferecer aos nossos clientes experiências que vão além do turismo convencional. Incentivamos a imersão na cultura local, a descoberta de novos sabores e a criação de memórias inesquecíveis.</p>
+                <p><b>Preços competitivos:</b> Acreditamos que viajar deve ser acessível a todos. Por isso, oferecemos pacotes de viagem com preços competitivos e flexíveis, para que você possa encontrar a opção ideal para o seu orçamento.</p>
+                <footer>
+                    <p>Copyright &copy; 2024 JM Viagens</p>
+                    <a href="politicasdeprivacidade.html">Política de Privacidade</a>
+                </footer>
+            </td>
+        </tr>
+    </table>
 
-      Há muitas variações de passagens de Lorem Ipsum disponíveis, mas a maioria sofreram alteração de alguma forma, por humor injetado, ou palavras aleatórias que não parece nem um pouco crível. Se você for usar uma passagem de Lorem Ipsum, Você precisa ter certeza de que não há nada embaraçoso escondido no meio do texto. Todos os geradores Lorem Ipsum na Internet tendem a repetir partes predefinidas conforme necessário, tornando este o primeiro verdadeiro gerador na Internet. Ele usa um dicionário de mais de 200 latim combinado com um punhado de estruturas de sentenças modelo, para gerar Lorem Ipsum que parece razoável. O Lorem Ipsum gerado é, portanto, sempre livre de repetição, humor injetado, ou palavras não características etc.</p>
-    </td>
-  </tr>
-  <tr>
-    <td style="text-align: center">
-      <h4>Todos os direitos reservados</h4>
-    </td>
-  </tr>
-</table>  
-  </body>
+    <table border="0" width="100%">
+        <tr>
+            <td style="text-align: center">
+                <h4>Todos os direitos reservados</h4>
+            </td>
+        </tr>
+    </table>
+</body>
 </html>
