--- a/projeto01/index.html
+++ b/projeto01/index.html
@@ -18,7 +18,8 @@
       <a href="index.html">Home</a> 
       <a href="quem-somos.html">Quem somos</a> 
       <a href="contato.html">Contato</a>
-      </td>
+      <a href="destinos.html">Destinos</a>
+    </td>
     </table>
     
       <table width="100%" align="center">
