--- a/projeto01/contato.html
+++ b/projeto01/contato.html
@@ -13,6 +13,8 @@
       <a href="index.html">Home</a> 
       <a href="quem-somos.html">Quem somos</a> 
       <a href="contato.html">Contato</a>
+      <a href="destinos.html">Destinos</a>
+      <a href="buscar.html">Busrcar-Pacotes</a>
       </td>
     </table>
 
@@ -20,10 +22,12 @@
     <td> <img src="imagens/contato.png" width="100%"/></td>
     
     <table  width="900" align="center"></table>
-    <h1>Comece sua aventura inesquecível!</h1>
-      <p>A JM Viagens é especializada em transformar sonhos em viagens incríveis. 
-      Com nossa expertise e atendimento personalizado, vamos te ajudar a planejar a viagem perfeita, seja para relaxar, se aventurar ou explorar novos lugares.</p>
-      <a href="cadastro.html" class="botao">Cadastre-se</cadastre-se></a>    
+    <h1> Entre em contato e comece sua aventura inesquecível!</h1>
+      <p>A JM Viagens é especializada em transformar sonhos em realidade através de viagens incríveis. 
+        Com nossa expertise e atendimento personalizado, estamos prontos para ajudar você a planejar a viagem perfeita.
+        Seja para relaxar, se aventurar ou explorar novos lugares, conte conosco para fazer de sua viagem uma experiência memorável. </p>
+        <p>Para mais informações, dúvidas ou para iniciar o planejamento da sua viagem, entre em contato conosco. Estamos ansiosos para atendê-lo!</p>
+      <a href="cadastro.html" class="botao">Fale Conosco</a>    
        <br.
       <table  width="900" align="center">
       <td style="text-align: center">
