--- a/projeto01/index.html
+++ b/projeto01/index.html
@@ -19,6 +19,7 @@
       <a href="quem-somos.html">Quem somos</a> 
       <a href="contato.html">Contato</a>
       <a href="destinos.html">Destinos</a>
+      <a href="buscarpacotes">Busrcar-Pacotes</a>
     </td>
     </table>
     
