--- a/projeto01/quem-somos.html
+++ b/projeto01/quem-somos.html
@@ -19,7 +19,7 @@
         footer p, footer a {
             color: black; /* Se você tiver uma cor específica para o texto do rodapé, pode substituir aqui */
         }
-        /* Adicione estilos adicionais conforme necessário */
+        
     </style>
 </head>
 <body>
@@ -35,6 +35,8 @@
                 <a href="index.html">Home</a>
                 <a href="quem-somos.html">Quem somos</a>
                 <a href="contato.html">Contato</a>
+                <a href="destinos.html">Destinos</a>
+                <a href="buscar.html">Busrcar-Pacotes</a>
             </td>
         </tr>
     </table>
@@ -56,10 +58,6 @@
                 <p><b>Atendimento personalizado:</b> Acreditamos que cada cliente é único e possui necessidades específicas. Por isso, oferecemos um atendimento personalizado e dedicado, desde a escolha do destino até o retorno para casa.</p>
                 <p><b>Experiências autênticas:</b> Buscamos oferecer aos nossos clientes experiências que vão além do turismo convencional. Incentivamos a imersão na cultura local, a descoberta de novos sabores e a criação de memórias inesquecíveis.</p>
                 <p><b>Preços competitivos:</b> Acreditamos que viajar deve ser acessível a todos. Por isso, oferecemos pacotes de viagem com preços competitivos e flexíveis, para que você possa encontrar a opção ideal para o seu orçamento.</p>
-                <footer>
-                    <p>Copyright &copy; 2024 JM Viagens</p>
-                    <a href="politicasdeprivacidade.html">Política de Privacidade</a>
-                </footer>
             </td>
         </tr>
     </table>
