--- a/projeto01/cadastro.html
+++ b/projeto01/cadastro.html
@@ -2,7 +2,7 @@
     <td> <img src="imagens/logo.png"/></td>
     
 <table  width="900" align="center">
-    <h1>cadastre-se</h1>
+    <h1>Fale Conosco</h1>
     <form>
       
         Nome Completo:<br/>
