--- a/projeto01/destinos.html
+++ b/projeto01/destinos.html
@@ -15,7 +15,7 @@
         <a href="index.html">Home</a> 
         <a href="quem-somos.html">Quem somos</a> 
         <a href="contato.html">Contato</a>
-        <a href="buscar.html">Busrcar-Pacotes</a>
+        <a href="buscar.html">BusrcarPacotes</a>
         </td>
       </table>
     <table style="width: 100%; border: 0;">
