--- a/projeto01/formulario.html
+++ b/projeto01/formulario.html
@@ -14,7 +14,7 @@
       <a href="quem-somos.html">Quem somos</a> 
       <a href="contato.html">Contato</a>
       <a href="destinos.html">Destinos</a>
-      <a href="buscar.html">Busrcar-Pacotes</a>
+      <a href="buscar.html">BusrcarPacotes</a>
     </td>
     </table>
 <table width="900" align="center">
