--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
      <a href="04/">Atividade 04 </a>- Formulários <br>
      <a href="05">Atividade 05 </a>- CSS <br>
      <a href="projeto01">Projeto 01 </a>- Projeto01<br>
-     <a href="07">Famílias de Fontes </a>- <br>
-     <a href="08">Atividade 07 </a>- <br>
+     <a href="07">Atividade 07 </a>- Famílias de Fontes<br>
+     <a href="08">Atividade 08</a>- <br>
      <a href="09">Atividade 08 </a>- <br>
     </body>
 </html>
