--- a/07/idex.html
+++ b/07/idex.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8" />
     <style type="text/css">
         .fonteSerif {
-            font-family: "Times New Roman"; /* Corrigido de "Neww" para "New" */
+            font-family: "Times New Roman";
             font-size: 80px;
         }
 
-        .fonteSerif {
+        .fonteSansSerif {
             font-family: "Verdana";
             font-size: 40px;
         }
 
-        .fonteSerif {
+        .fonteMonospace {
             font-family: "Courier New";
             font-size: 20px;
         }
 
-        .conteudo{
+        .conteudo {
             font-size: 30px;
         }
     </style>
@@ -27,9 +27,9 @@
 
 <body>
     <div class="conteudo">
-    <p class="fonteSerif">Programação</p>
-    <p class="fonteSans-Serif">Programação web</p>
-    <p class="fonteMonospace">Progamação web</p>
+        <p class="fonteSerif">Programação web</p>
+        <p class="fonteSansSerif">Programação web</p>
+        <p class="fonteMonospace">Programação web</p>
     </div>
 </body>
 </html>
