--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
      <a href="projeto01">Projeto 01 </a>- Projeto01<br>
      <a href="06">Atividade 06 </a>- Tag Div e Span<br>
      <a href="07">Atividade 07</a>-Famílias de Fontes<br>
-     <a href="08">Atividade 08 </a>- <br>
+     <a href="08">Atividade 08 </a>-Box Model <br>
     </body>
 </html>
