--- a/08/idex.html
+++ b/08/idex.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BOX MODEL</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .noticia {
-            font-family: "Open Sans", Arial, sans-serif; /* Alterado para uma forma mais comum de referenciar Open Sans */
-            background-color: #F5F5DC;
-            border: 1px solid black;
-            font-size: 16px;
-            padding: 20px; 
-            margin-bottom: 20px; 
-        }
-
-        .noticia h1 {
-            color: #c4170c;
-            font-family: "Helvetica Neue", Arial, sans-serif;
-        }
-    </style>
+    <title> BOX MODEL </title>
+    <meta charset="utf-8"> 
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <div class="noticia">
-        <h1>Chuva intensa nesta semana</h1>
-        <p>O Instituto Nacional de Meteorologia (Inmet) emitiu dois avisos de "perigo" por conta dos temporais. Algumas regiões podem registrar volumes superiores a 100 milímetros por dia.</p>
-    </div>
+    <div class="container">
+        <div>
+            <br>
+            <div class="noticia">
+                <img class="imagem" src="imagens/imagens (1)/imagem1.png">
+                <p>Imagem 1</p>
+            </div>
+            <div class="noticia">
+                <img class="imagem" src="imagens/imagens (1)/imagem2.png">
+                <p>Imagem 2</p>
+            </div>
+            <div class="noticia">
+                <img class="imagem" src="imagens/imagens (1)/imagem3.png">
+                <p>Imagem 3</p>
+            </div>
+            <div class="noticia">
+                <img class="imagem" src="imagens/imagens (1)/imagem4.png">
+                <p>Imagem 4</p>
+            </div>
+            <div class="noticia">
+                <img class="imagem" src="imagens/imagens (1)/imagem5.png">
+                <p>Imagem 5</p>
+            </div>
+        </div>
+        
+            <p> Explore nossa coleção cuidadosamente curada de fotografias que capturam a essência e a beleza do mundo ao nosso redor. Desde paisagens deslumbrantes e momentos urbanos vibrantes até retratos expressivos e fenômenos naturais impressionantes, nossa galeria é um tributo à diversidade e à beleza que nos cercam.
 
-    <div class="noticia">
-        <h1>Outra Grande Notícia</h1>
-        <p>Aqui vai outro resumo interessante sobre algo de grande valor. Não perca as últimas novidades!</p>
+                Cada imagem conta uma história, congelando um momento no tempo que, de outra forma, poderia ter passado despercebido. Esperamos que ao navegar por esta galeria, você encontre não apenas beleza visual, mas também uma fonte de inspiração que ressoe com suas próprias experiências e sonhos. </p>
     </div>
 </body>
 </html>
