--- a/08/idex.html
+++ b/08/idex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> BOX MODEL </title>
+    <title>Box Model </title>
     <meta charset="utf-8"> 
     <link rel="stylesheet" href="estilo.css">
 </head>
