--- a/09/atividadea.html
+++ b/09/atividadea.html
@@ -1,6 +1,101 @@
 <!DOCTYPE html>
-<html lang="pt br">
-    <head>
-        <meta charset=""
-    </head>
-</html> 
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Atividade A</title>
+
+    <style type="text/css">
+
+        #header{
+            position: fixed;
+            width: 100%;
+            height: 15%;
+            background: lightskyblue;
+            top:0px;
+            left: 0px;
+            right: 0px;
+            text-align: center;
+            align-content: center;
+            z-index: 1000;
+        }
+        #menu{
+            position: absolute;
+            width: 100%;
+            height: 10%;
+            background: lightcoral;
+            top: 15%;
+            left: 0px;
+            right: 0px;
+            text-align: center;
+            align-content: center;
+        }
+        #center{
+            background: lightgreen;
+            position: absolute;
+            width: 50%;
+            height: 100%;
+            left: 25%;
+            right: 25%;
+            top: 25%;
+            text-align: center;
+            align-content: center;
+        }
+        #left{
+            background: rgb(253, 253, 165);
+            position: absolute;
+            width: 25%;
+            height: 100%;
+            left: 0%;
+            right: 75%;
+            top: 25%;
+            text-align: center;
+            align-content: center;
+        }
+        #right{
+            background: rgba(207, 119, 35, 0.849);
+            position: absolute;
+            width: 25%;
+            height: 100%;
+            left: 75%;
+            right: 0%;
+            top: 25%;
+            text-align: center;
+            align-content: center;
+        }
+        #footer{
+            background: rgba(209, 120, 231, 0.822);
+            position: absolute;
+            width: 100%;
+            height: 10%;
+            left: 0%;
+            right: 0%;
+            top: 125%;
+            text-align: center;
+            align-content: center;
+        }
+
+    </style>
+</head>
+<body>
+    <div id="header" class="header">
+        <h1>HEADER</h1>
+    </div>
+    <div id="menu" class="menu">
+        <h4>MENU</h4>
+    </div>
+    <div id="center" class="center">
+        <h2>CENTER</h2>
+    </div>
+    <div id="left" class="left">
+        <h3>LEFT</h3>
+    </div>
+    <div id="right" class="right">
+        <h3>RIGHT</h3>
+    </div>
+    <div id="footer" class="footer">
+        <h5>FOOTER</h5>
+    </div>
+    
+</body>
+</html>
