--- a/09/index.html
+++ b/09/index.html
@@ -1,15 +1,47 @@
-<!DOCTYPE html> 
-<html>
-    <head>
-        <title> Box Model</title>
-        <meta charset="utf-8"/>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Atividade 09</title>
+    <style>
+        body{
+            background: #d6d6d6;
+        }
 
-        <style type="text/css">
-            
+        .container p{
+            clear: both;
+            padding: 10px;
+            align-content: center;
+
+        }
+
+        .foto {
+            width: 550px;
+        }
+        .card{
+            font-family: 'opensans-regular', Arial, sans-serif;
+            background-color: #F5F5DC;
+            border: 1px solid black;
+            color: #333;
+            text-align: center;
+            font-size: 14px;
+            padding: 5px;
+            margin: 10px;
+        }
+        .paragrafo{
+            text-align: justify;
+        }
         </style>
-    </head>
-
+</head>
 <body>
-    
+    <div class="container">
+        <div class="card">
+             <a href="atividadea.html"><h2>Fixar Header</h2></a>
+        </div>
+        <div class="card">
+            <a href="atividadeb.html"><h2> Fixar Side Bar</h2></a>
+        </div>      
+    </div>
 </body>
 </html>
