--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
      <a href="07">Atividade 07</a>-Famílias de Fontes<br>
      <a href="08">Atividade 08 </a>-Box Model <br>
      <a href="09">Atividade 09 </a> Posicionamento<br>
+     <a href="10">Atividade 10 </a> Formatação de Link, Tags nav, header e footer <br>
+     <a href="11">Atividade 11 </a> <br>
+     <a href="12">Atividade 12 </a> <br>
+     <a href="13">Atividade 13 </a> <br>
+     <a href="14">Atividade 14 </a><br>
+     <a href="15">Atividade 15 </a> <br>
     </body>
 </html>
