--- a/10/index.html
+++ b/10/index.html
@@ -154,6 +154,16 @@
                  <footer>11 abr 2024 - 16h40 (atualizado às 17h53)
             </footer>
             </div>
+         <div class="noticia">
+             <header>
+            <img class="logo-noticia-cnn" src="https://a10mais.com/images/site/a10colorido.png">
+            </header>
+            <img class="imagem-noticia" src="imagensn/n5.jpeg">
+            <p> HGV realiza cirurgia rara para tratar neuralgia do trigêmeo conhecida como a pior dor do mundo
+            </p>
+               <footer>18 julho 2024 - 15h35 
+            </footer>
+        </div>
 
 
 
