--- a/10/index.html
+++ b/10/index.html
@@ -156,7 +156,7 @@
             </div>
          <div class="noticia">
              <header>
-            <img class="logo-noticia-cnn" src="https://a10mais.com/images/site/a10colorido.png">
+            <img class="logo-noticia-cnn" src="https://th.bing.com/th/id/OIP.Q1OZHV-NIrqFmREUweptbAAAAA?w=187&h=90&c=7&r=0&o=5&pid=1.7">
             </header>
             <img class="imagem-noticia" src="imagensn/n5.jpeg">
             <p> HGV realiza cirurgia rara para tratar neuralgia do trigêmeo conhecida como a pior dor do mundo
@@ -164,6 +164,18 @@
                <footer>18 julho 2024 - 15h35 
             </footer>
         </div>
+
+        <div class="noticia">
+            <header>
+           <img class="logo-noticia-cnn" src="https://th.bing.com/th?id=ODLS.ca404faa-828b-408d-a4ca-32fdadf143e9&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2">
+           </header>
+           <img class="imagem-noticia" src="https://newr7-r7-prod.web.arc-cdn.net/resizer/v2/R4TMQNXJIVEOVDY5ZSBQHQR5XY.jpg?auth=0c4cf81683caa2e29307b705fa3a38c2b8c3e54fc84b29c7aaa2f7841d8a79a7&width=770&height=513">
+           <p> Relatório da CGU aponta falhas no programa de merenda escolar entre os anos de 2015 e 2020
+           </p>
+              <footer> 18/07/2024 - 07H40 (ATUALIZADO EM 18/07/2024 - 07H41)
+           </footer>
+       </div>
+
 
 
 
