--- a/10/index.html
+++ b/10/index.html
@@ -9,26 +9,11 @@
                 clear: both;
             }
 
-            nav {
-                border-bottom: 2px solid #ccc;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            }
 
             footer {
                 font-size: 10px;
             }
 
-            .menu {
-                background: #ffffff;
-                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                font-size: 18px;
-                top: 0px;
-                margin: 0px;
-                padding: 10px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
 
             .logo {
                 width: 100px;
@@ -49,7 +34,7 @@
 
             .header {
                 text-align: center;
-                color: #0e0370;
+                color: #000000;
             }
 
             .noticia {
