--- a/10/index.html
+++ b/10/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Atividade 10</title>
+        <title>Formatação de Link, Tags nav, header e footer </title>
         <style>
             body {
                 clear: both;
