--- a/10/index.html
+++ b/10/index.html
@@ -3,17 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Formatação de Link, Tags nav, header e footer </title>
+        <title>Formatação de Link, Tags nav, header e footer</title>
         <style>
             body {
                 clear: both;
             }
 
+            nav {
+                border-bottom: 2px solid #ccc;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            }
 
             footer {
                 font-size: 10px;
             }
 
+            .menu {
+                background: #ffffff;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+                font-size: 18px;
+                top: 0px;
+                margin: 0px;
+                padding: 10px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
 
             .logo {
                 width: 100px;
@@ -34,7 +49,7 @@
 
             .header {
                 text-align: center;
-                color: #000000;
+                color: #0e0370;
             }
 
             .noticia {
