--- a/10/index.html
+++ b/10/index.html
@@ -49,7 +49,7 @@
 
             .header {
                 text-align: center;
-                color: #050507;
+                color: #0e0370;
             }
 
             .noticia {
