--- a/11/index.html
+++ b/11/index.html
@@ -92,14 +92,24 @@
             width: 45%;
             float: left;
         }
-        
+        .propaganda{
+            padding-top: 20px;
+        }
         .imagem-noticia{
             width: 180px;
             border-radius: 20px;
             padding: 10px;
             float: left;
         }
-        
+        .imagem-propaganda{
+            width: 100px;
+        }
+        .logo-propaganda{
+            width: 70px;
+        }
+        .logo-rodape{
+            width: 50px;
+        }
         .text-rodape{
             font-size: 10px;
         }
