--- a/11/index.html
+++ b/11/index.html
@@ -232,7 +232,7 @@
         </div>
         </section>
         <section>
-        <div class="noticia">
+        <section class="noticia">
             <header id="title-news">
                 Violência
             </header>
@@ -245,7 +245,7 @@
             <footer>
                 Postado por celebridadesnews
             </footer>
-        </div>
+        </section>
     </section>
 <footer class="footer">
     <p>&copy; Noticias 2024</p>
