--- a/11/index.html
+++ b/11/index.html
@@ -245,11 +245,8 @@
             <footer>
                 Postado por celebridadesnews
             </footer>
-        </section>
+        </div>
     </section>
-<footer class="footer">
-    <p>&copy; Noticias 2024</p>
-</footer>
 </article>
 </body>
 </html>
