--- a/11/index.html
+++ b/11/index.html
@@ -232,7 +232,7 @@
         </div>
         </section>
         <section>
-        <section class="noticia">
+        <div class="noticia">
             <header id="title-news">
                 Violência
             </header>
