--- a/11/index.html
+++ b/11/index.html
@@ -127,7 +127,7 @@
             color: black;
         }
         a:hover{
-            color: #3500a8;
+            color: #a1150b;
         }
         a:active{
             color: #FF1493;
