--- a/11/index.html
+++ b/11/index.html
@@ -92,9 +92,6 @@
             width: 45%;
             float: left;
         }
-        .propaganda{
-            padding-top: 20px;
-        }
         .imagem-noticia{
             width: 180px;
             border-radius: 20px;
@@ -130,7 +127,7 @@
             color: #a1150b;
         }
         a:active{
-            color: #FF1493;
+            color: #b61206;
         }
 
     </style>
