--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
      <a href="10">Atividade 10 </a> Formatação de Link, Tags nav, header e footer <br>
      <a href="11">Atividade 11 </a> Tag Article Section Time Aside <br>
      <a href="12">Atividade 12 </a> Atributo Data <br>
-     <a href="13">Atividade 13 </a> <br>
-     <a href="14">Atividade 14 </a><br>
+     <a href="13">Atividade 13 </a>Introdução ao CSS3 <br>
+     <a href="14">Atividade 14 </a> Transparência, Sombra e Gradiente<br>
      <a href="15">Atividade 15 </a> <br>
     </body>
 </html>
