--- a/14/idex.html
+++ b/14/idex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="normalize.css">
-    <title>  Transparência, Sombra e Gradiente </title>
+    <title>Atividade 14</title>
 
     <style>
         body{
