--- a/14/idex.html
+++ b/14/idex.html
@@ -1,59 +1,40 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>  </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" type="text/css" href="normalize.css">
-    <title>Atividade 14</title>
-
     <style>
-        body{
-            background: #d6d6d6;
-        }
+        .box{
+    background: url(camera.png);
+    width: 300px;
+    height: 300px;
+    margin: 50px;
+    box-sizing: border-box;
+}
+.box h1{
+    background: rgba(255, 255, 255, 0.5);
+    text-align: center;
+}
 
-        .container p{
-            clear: both;
-            padding: 10px;
-            align-content: center;
-        }
-
-        .foto {
-            width: 300px;
-            padding-top: 10px;
-        }
-        .foto1{
-            width: 500px;
-            padding-top: 10px;
-        }
-        .card{
-            font-family: 'opensans-regular', Arial, sans-serif;
-            background-color: #F5F5DC;
-            border: 1px solid black;
-            color: #333;
-            text-align: center;
-            font-size: 14px;
-            padding: 5px;
-            margin: 10px;
-        }
-        .paragrafo{
-            text-align: justify;
-        }
+a{
+    background: rgba(255, 255, 255, 0.5);
+}
     </style>
+
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <img class="foto" src="img/Captura de tela 2024-07-13 230928.png">
-            <a href="sombras.html"><h2>Atividade A</h2></a>
-        </div>
-        <div class="card">
-            <img class="foto1" src="img/Captura de tela 2024-07-13 230941.png">
-            <a href="box-shadow.html"><h2>Atividade B</h2></a>
-        </div>
-        <div class="card">
-            <img class="foto1" src="img/Captura de tela 2024-07-13 230949.png">
-            <a href="gradiente.html"><h2>Atividade C</h2></a>
-        </div>    
+    <div class="box">
+        <h1> Lorem Ipsum</h1>
+    </div>
+    <div> 
+        <ul> 
+            <a href="Efeito sombra/index.html"> Efeito Sombra </a>
+        <br><br>
+            <a href="Gradiente linear/index.html"> Gradiente Linear </a>
+        <br><br>
+            <a href="Gradiente radial/index.html"> Gradiente Radial </a>
+        </ul>
     </div>
 </body>
-</html>
