--- a/14/img/index.html
+++ b/14/img/index.html
@@ -43,16 +43,16 @@
 <body>
     <div class="container">
         <div class="card">
-            <img class="foto" src="img/Captura de tela 2024-07-13 230928.png">
-            <a href="sombras.html"><h2>Atividade A</h2></a>
+            <img class="foto" src="img1.png">
+            <a href="sombras.html"><h2>Efeito sombraA</h2></a>
         </div>
         <div class="card">
-            <img class="foto1" src="img/Captura de tela 2024-07-13 230941.png">
-            <a href="box-shadow.html"><h2>Atividade B</h2></a>
+            <img class="foto1" src="img2.png">
+            <a href="box-shadow.html"><h2>Gradiente Linear</h2></a>
         </div>
         <div class="card">
-            <img class="foto1" src="img/Captura de tela 2024-07-13 230949.png">
-            <a href="gradiente.html"><h2>Atividade C</h2></a>
+            <img class="foto1" src="img3.png">
+            <a href="gradiente.html"><h2>Gradiente radial</h2></a>
         </div>    
     </div>
 </body>
