--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
      <a href="13">Atividade 13 </a>Introdução ao CSS3 <br>
      <a href="14">Atividade 14 </a> Transparência, Sombra e Gradiente<br>
      <a href="15">Atividade 15 </a> <br>
+     <a href="15">Atividade 16 </a> <br>
+     <a href="15">Atividade 17 </a> <br>
     </body>
 </html>
