--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
      <a href="12">Atividade 12 </a> Atributo Data <br>
      <a href="13">Atividade 13 </a>Introdução ao CSS3 <br>
      <a href="14">Atividade 14 </a> Transparência, Sombra e Gradiente<br>
-     <a href="15">Atividade 15 </a> <br>
-     <a href="15">Atividade 16 </a> <br>
-     <a href="15">Atividade 17 </a> <br>
+     <a href="15">Atividade 15 </a> Transition Animation <br>
+     <a href="15">Atividade 16 </a>Design Responsivo Bootstrap <br>
+     <a href="15">Atividade 17 </a> Sistema de grid <br>
     </body>
 </html>
