--- a/14/atividade1.html
+++ b/14/atividade1.html
@@ -7,7 +7,7 @@
 
     <style>
         .box{
-            background: url(../14/img/2m96-nfM.png);
+            background: url(imagem/im1.png);
             width: 300px;
             height: 300px;
             margin: 50px;
