--- a/14/atividade1.html
+++ b/14/atividade1.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="pt-br"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,5 +33,4 @@
 
 
 
-</body>
-</html>
+</body></html>
