--- a/14/index.html
+++ b/14/index.html
@@ -43,15 +43,15 @@ d<!DOCTYPE html>
     <div class="container">
         <div class="card">
             <img class="foto" src="imagem/im1.png">
-            <a href="sombras.html"><h2>Atividade 1</h2></a>
+            <a href="imagem/im1.png"><h2>Atividade 1</h2></a>
         </div>
         <div class="card">
             <img class="foto1" src="imagem/im2.png">
-            <a href="box-shadow.html"><h2>Atividade 2</h2></a>
+            <a href="imagem/im2.png"><h2>Atividade 2</h2></a>
         </div>
         <div class="card">
             <img class="foto1" src="imagem/im3.png">
-            <a href="gradiente.html"><h2>Atividade 3</h2></a>
+            <a href="imagem/im3.png"><h2>Atividade 3</h2></a>
         </div>    
     </div>
 
