--- a/16/index.html
+++ b/16/index.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Atividade 16</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
   </head>
   <body>
     <h1>Hello, world!</h1>
     
-    <!-- Botões -->
-    <button class="btn btn-primary">Pesquisar</button>
-    <button class="btn btn-danger">Excluir</button>
-    <button class="btn btn-success">Atualizar</button>
+    
+    <button class="btn btn-primary">
+      <i class="bi bi-search"></i> Pesquisar
+    </button>
+    <button class="btn btn-danger">
+      <i class="bi bi-trash"></i> Excluir
+    </button>
+    <button class="btn btn-success">
+      <i class="bi bi-arrow-repeat"></i> Atualizar
+    </button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
