--- a/17/index.html
+++ b/17/index.html
@@ -3,48 +3,41 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Atividade de Bootstrap</title>
+    <title>Galeria de Gatos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
-      .conteudo {
-        border: 1px solid #000;
-        padding: 20px;
-      }
-      .linha {
-        margin-bottom: 10px;
-      }
-      .coluna {
-        border: 1px solid #000;
-        padding: 10px;
+      .galeria-img {
+        width: 100%;
+        height: auto;
+        border-radius: 8px;
+        margin-bottom: 15px;
       }
     </style>
   </head>
   <body>
-    <div class="container conteudo">
-      <h1>Sistema de Grid com Bootstrap</h1>
+    <div class="container">
+      <h1 class="text-center my-4">Galeria de Gatos</h1>
 
-      <div class="mb-3">
-        <button class="btn btn-primary">
-          <i class="bi bi-search"></i> Pesquisar
-        </button>
-        <button class="btn btn-danger">
-          <i class="bi bi-trash"></i> Excluir
-        </button>
-        <button class="btn btn-success">
-          <i class="bi bi-arrow-repeat"></i> Atualizar
-        </button>
-      </div>
-
-      
-      <div class="row linha">
-        <div class="col-md-6 col-sm-12 coluna">Coluna 1 (md-6 sm-12)</div>
-        <div class="col-md-6 col-sm-12 coluna">Coluna 2 (md-6 sm-12)</div>
-      </div>
-      <div class="row linha">
-        <div class="col-md-4 col-sm-6 coluna">Coluna 3 (md-4 sm-6)</div>
-        <div class="col-md-4 col-sm-6 coluna">Coluna 4 (md-4 sm-6)</div>
-        <div class="col-md-4 col-sm-12 coluna">Coluna 5 (md-4 sm-12)</div>
+      <!-- Sistema de Grid para a Galeria -->
+      <div class="row">
+        <div class="col-md-4 col-sm-6">
+          <img src="https://placekitten.com/300/200" alt="Gato 1" class="galeria-img">
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <img src="https://placekitten.com/300/201" alt="Gato 2" class="galeria-img">
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <img src="https://placekitten.com/300/202" alt="Gato 3" class="galeria-img">
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <img src="https://placekitten.com/300/203" alt="Gato 4" class="galeria-img">
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <img src="https://placekitten.com/300/204" alt="Gato 5" class="galeria-img">
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <img src="https://placekitten.com/300/205" alt="Gato 6" class="galeria-img">
+        </div>
       </div>
     </div>
 
