--- a/17/index.html
+++ b/17/index.html
@@ -6,37 +6,47 @@
     <title>Galeria de Gatos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      .galeria-img {
+      .galeria {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr;
+        gap: 10px;
+      }
+      .galeria img {
         width: 100%;
         height: auto;
         border-radius: 8px;
-        margin-bottom: 15px;
+      }
+      .item1 {
+        grid-row: span 2;
+      }
+      .item2 {
+        grid-column: span 2;
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <h1 class="text-center my-4">Galeria de Gatos</h1>
+    <div class="container my-4">
+      <h1 class="text-center mb-4">Galeria de Gatos</h1>
 
-      <!-- Sistema de Grid para a Galeria -->
-      <div class="row">
-        <div class="col-md-4 col-sm-6">
-          <img src="https://placekitten.com/300/200" alt="Gato 1" class="galeria-img">
+      <!-- Galeria de Imagens -->
+      <div class="galeria">
+        <div class="item1">
+          <img src="https://placekitten.com/600/400" alt="Gato 1">
         </div>
-        <div class="col-md-4 col-sm-6">
-          <img src="https://placekitten.com/300/201" alt="Gato 2" class="galeria-img">
+        <div>
+          <img src="https://placekitten.com/300/200" alt="Gato 2">
         </div>
-        <div class="col-md-4 col-sm-6">
-          <img src="https://placekitten.com/300/202" alt="Gato 3" class="galeria-img">
+        <div>
+          <img src="https://placekitten.com/300/200" alt="Gato 3">
         </div>
-        <div class="col-md-4 col-sm-6">
-          <img src="https://placekitten.com/300/203" alt="Gato 4" class="galeria-img">
+        <div class="item2">
+          <img src="https://placekitten.com/300/150" alt="Gato 4">
         </div>
-        <div class="col-md-4 col-sm-6">
-          <img src="https://placekitten.com/300/204" alt="Gato 5" class="galeria-img">
+        <div>
+          <img src="https://placekitten.com/300/200" alt="Gato 5">
         </div>
-        <div class="col-md-4 col-sm-6">
-          <img src="https://placekitten.com/300/205" alt="Gato 6" class="galeria-img">
+        <div>
+          <img src="https://placekitten.com/300/200" alt="Gato 6">
         </div>
       </div>
     </div>
