--- a/17/index.html
+++ b/17/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Galeria de Gatos</title>
+    <title>Atividade 17</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
       .galeria {
@@ -28,10 +28,10 @@
     <div class="container my-4">
       <h1 class="text-center mb-4">Galeria de Gatos</h1>
 
-      <!-- Galeria de Imagens -->
+  
       <div class="galeria">
         <div class="item1">
-          <img src="https://placekitten.com/600/400" alt="Gato 1">
+          <img src="https://th.bing.com/th/id/R.964f5f4e167f7a4c4391260dd5231e6b?rik=jXqdHkQaUKaJhQ&pid=ImgRaw&r=0" alt="Gato 1">
         </div>
         <div>
           <img src="https://placekitten.com/300/200" alt="Gato 2">
