--- a/17/index.html
+++ b/17/index.html
@@ -6,6 +6,9 @@
     <title>Atividade 17</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+      .conteudo {
+        padding: 20px;
+      }
       .galeria {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -26,27 +29,31 @@
     </style>
   </head>
   <body>
-    <div class="container my-4">
-     
+    <div class="container conteudo">
+      <h1 class="text-center mb-4">Galeria de Gatos</h1>
+
       <div class="galeria">
         <div class="item1">
-          <img src="https://th.bing.com/th/id/R.964f5f4e167f7a4c4391260dd5231e6b?rik=jXqdHkQaUKaJhQ&pid=ImgRaw&r=0" alt="Gato 1">
+          <img src="imggato/g1.jpeg" alt="Gato 1">
         </div>
         <div>
-          <img src="https://th.bing.com/th/id/OIP.ng_GPaAiEtBb_Ezok8LE1AHaEo?pid=ImgDet&w=474&h=296&rs=1" alt="Gato 2">
+          <img src="imggato/g2.jpeg" alt="Gato 2">
         </div>
         <div>
-          <img src="https://th.bing.com/th/id/OIP.LDQzDvjOqqsvET43NZvuZQHaFj?pid=ImgDet&w=474&h=355&rs=1" alt="Gato 3">
+          <img src="imggato/g3.jpeg" alt="Gato 3">
         </div>
         <div class="item2">
-          <img src="https://th.bing.com/th/id/OIP.QWk1INxSTvjq4M9If0iREQHaHv?pid=ImgDet&w=383&h=400&rs=1" alt="Gato 4">
+          <img src="imggato/g4.jpeg" alt="Gato 4">
         </div>
         <div>
-          <img src="https://th.bing.com/th/id/OIP.qmwueVQW2I7rEJYRH7wlKgAAAA?w=280&h=280&rs=1&pid=ImgDetMain" alt="Gato 5">
+          <img src="imggato/g5.jpeg" alt="Gato 5">
         </div>
         <div>
-          <img src="https://pds.exblog.jp/logo/1/197001/01/26/f040812620230730104443.jpg" alt="Gato 6">
+          <img src="imggato/g6.jpeg" alt="Gato 6">
         </div>
+        <div>
+            <img src="imggato/g7.jpeg" alt="Gato 6">
+          </div>
       </div>
     </div>
 
