--- a/17/index.html
+++ b/17/index.html
@@ -11,7 +11,8 @@
       }
       .galeria {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: 2fr 1fr 1fr;
+        grid-template-rows: repeat(3, 1fr);
         gap: 10px;
       }
       .galeria img {
@@ -20,7 +21,6 @@
         border-radius: 8px;
       }
       .item1 {
-        grid-column: span 2;
         grid-row: span 2;
       }
       .item2 {
@@ -51,9 +51,6 @@
         <div>
           <img src="imggato/g6.jpeg" alt="Gato 6">
         </div>
-        <div>
-            <img src="imggato/g7.jpeg" alt="Gato 6">
-          </div>
       </div>
     </div>
 
