--- a/17/index.html
+++ b/17/index.html
@@ -3,54 +3,49 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Atividade 17</title>
+    <title>Atividade de Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
       .conteudo {
+        border: 1px solid #000;
         padding: 20px;
       }
-      .galeria {
-        display: grid;
-        grid-template-columns: 2fr 1fr 1fr;
-        grid-template-rows: repeat(3, 1fr);
-        gap: 10px;
+      .linha {
+        margin-bottom: 10px;
       }
-      .galeria img {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-      }
-      .item1 {
-        grid-row: span 2;
-      }
-      .item2 {
-        grid-column: span 2;
+      .coluna {
+        border: 1px solid #000;
+        padding: 10px;
       }
     </style>
   </head>
   <body>
     <div class="container conteudo">
-      <h1 class="text-center mb-4">Galeria de Gatos</h1>
+      <h1>Sistema de Grid com Bootstrap</h1>
 
-      <div class="galeria">
-        <div class="item1">
-          <img src="imggato/g1.jpeg" alt="Gato 1">
-        </div>
-        <div>
-          <img src="imggato/g2.jpeg" alt="Gato 2">
-        </div>
-        <div>
-          <img src="imggato/g3.jpeg" alt="Gato 3">
-        </div>
-        <div class="item2">
-          <img src="imggato/g4.jpeg" alt="Gato 4">
-        </div>
-        <div>
-          <img src="imggato/g5.jpeg" alt="Gato 5">
-        </div>
-        <div>
-          <img src="imggato/g6.jpeg" alt="Gato 6">
-        </div>
+      <!-- Botões com ícones -->
+      <div class="mb-3">
+        <button class="btn btn-primary">
+          <i class="bi bi-search"></i> Pesquisar
+        </button>
+        <button class="btn btn-danger">
+          <i class="bi bi-trash"></i> Excluir
+        </button>
+        <button class="btn btn-success">
+          <i class="bi bi-arrow-repeat"></i> Atualizar
+        </button>
+      </div>
+
+      <!-- Sistema de Grid -->
+      <div class="row linha">
+        <div class="col-md-6 col-sm-12 coluna">Coluna 1 (md-6 sm-12)</div>
+        <div class="col-md-6 col-sm-12 coluna">Coluna 2 (md-6 sm-12)</div>
+      </div>
+      <div class="row linha">
+        <div class="col-md-4 col-sm-6 coluna">Coluna 3 (md-4 sm-6)</div>
+        <div class="col-md-4 col-sm-6 coluna">Coluna 4 (md-4 sm-6)</div>
+        <div class="col-md-4 col-sm-12 coluna">Coluna 5 (md-4 sm-12)</div>
       </div>
     </div>
 
