--- a/17/index.html
+++ b/17/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Atividade de Bootstrap</title>
+    <title>Atividade 17</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
@@ -17,6 +17,11 @@
       .coluna {
         border: 1px solid #000;
         padding: 10px;
+        text-align: center; 
+      }
+      .img-fluid {
+        max-width: 100%;
+        height: auto;
       }
     </style>
   </head>
@@ -24,28 +29,32 @@
     <div class="container conteudo">
       <h1>Sistema de Grid com Bootstrap</h1>
 
-      <!-- Botões com ícones -->
-      <div class="mb-3">
-        <button class="btn btn-primary">
-          <i class="bi bi-search"></i> Pesquisar
-        </button>
-        <button class="btn btn-danger">
-          <i class="bi bi-trash"></i> Excluir
-        </button>
-        <button class="btn btn-success">
-          <i class="bi bi-arrow-repeat"></i> Atualizar
-        </button>
-      </div>
-
-      <!-- Sistema de Grid -->
       <div class="row linha">
-        <div class="col-md-6 col-sm-12 coluna">Coluna 1 (md-6 sm-12)</div>
-        <div class="col-md-6 col-sm-12 coluna">Coluna 2 (md-6 sm-12)</div>
+        <div class="col-md-4 col-sm-6 coluna">
+          <img src="imggato/g1.jpeg" alt="Imagem 1" class="img-fluid">
+        </div>
+        <div class="col-md-4 col-sm-6 coluna">
+          <img src="imggato/g2.jpeg" alt="Imagem 2" class="img-fluid">
+        </div>
+        <div class="col-md-4 col-sm-12 coluna">
+          <img src="imggato/g3.jpeg" alt="Imagem 3" class="img-fluid">
+        </div>
       </div>
       <div class="row linha">
-        <div class="col-md-4 col-sm-6 coluna">Coluna 3 (md-4 sm-6)</div>
-        <div class="col-md-4 col-sm-6 coluna">Coluna 4 (md-4 sm-6)</div>
-        <div class="col-md-4 col-sm-12 coluna">Coluna 5 (md-4 sm-12)</div>
+        <div class="col-md-4 col-sm-6 coluna">
+          <img src="imggato/g4.jpeg" alt="Imagem 4" class="img-fluid">
+        </div>
+        <div class="col-md-4 col-sm-6 coluna">
+          <img src="imggato/g5.jpeg" alt="Imagem 5" class="img-fluid">
+        </div>
+        <div class="col-md-4 col-sm-12 coluna">
+          <img src="imggato/g6.jpeg" alt="Imagem 6" class="img-fluid">
+        </div>
+      </div>
+      <div class="row linha">
+        <div class="col-md-4 col-sm-6 coluna">
+          <img src="imggato/g7.jpeg" alt="Imagem 7" class="img-fluid">
+        </div>
       </div>
     </div>
 
