--- a/17/index.html
+++ b/17/index.html
@@ -16,7 +16,7 @@
       }
       .coluna {
         border: 1px solid #000;
-        padding: 10px;
+        padding: 0;
         text-align: center; 
       }
       .img-fluid {
