--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
      <a href="15">Atividade 15 </a> Transition Animation <br>
      <a href="16">Atividade 16 </a>Design Responsivo Bootstrap <br>
      <a href="17">Atividade 17 </a> Sistema de grid <br>
+     <a href="18">Atividade 18</a> Formulários tabelas <br>
+     <a href="19">Atividade 19 </a> botões e imgens responsivas <br>
+     <a href="20">Atividade 20 </a> barra de navegação<br>
     </body>
 </html>
