--- a/18/index.html
+++ b/18/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Produtos</title>
+    <title>Atividade 18</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 
     <div class="container mt-5">
-        <h1>Produtos</h1>
+       
         <table class="table table-striped table-hover table-condensed">
             <thead>
                 <tr>
